fix overflow-hidden error

--- a/src/assets/style/utilities/_hover.scss
+++ b/src/assets/style/utilities/_hover.scss
@@ -1,11 +1,10 @@
 .hvr-card {
-  z-index: 10;
   & .ratio{
     overflow: hidden;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
   }
   & img {
     transition: all 0.5s ease-out;
-    z-index: -10;
   }
   &:hover {
     & img {
@@ -15,12 +14,12 @@
 } 
 
 .hvr-category {
-  z-index: 10;
   overflow: hidden;
   border-radius: 24px;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+
   & img {
     transition: all 0.5s ease-out;
-    z-index: -10;
   }
   &:hover {
     & img {
