--- a/src/assets/style/utilities/_utilities.scss
+++ b/src/assets/style/utilities/_utilities.scss
@@ -59,3 +59,6 @@ $rounded-type:(
     border-radius: $value !important;
   }
 }
+.rounded-end-12px{
+  border-radius: 12px 0 0 12px ;
+}
